# Project-FireDetector

./: Building.cpp  Building.h  CMakeLists.txt  Exceptions.h  InfraredSensor.cpp  InfraredSensor.h  README.md  Sensor.cpp  Sensor.h  Siren.cpp  Siren.h  SmokeDetector.cpp  SmokeDetector.h  main  main.cpp
